--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@
 *.json
 test.dSYM/*
 test
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
